--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="temperature">Temperature (°C):</label>
-                        <input type="number" id="temperature" step="0.01" min="35" max="40" required>
+                        <label for="temperature">Temperature (<span id="tempUnit">°C</span>):</label>
+                        <input type="number" id="temperature" step="0.1" required>
                     </div>
                     <div class="form-group">
                         <label for="notes">Notes (optional):</label>
@@ -126,8 +126,8 @@
                     <input type="date" id="editDate" required>
                 </div>
                 <div class="form-group">
-                    <label for="editTemperature">Temperature (°C):</label>
-                    <input type="number" id="editTemperature" step="0.01" min="35" max="40" required>
+                    <label for="editTemperature">Temperature (<span id="editTempUnit">°C</span>):</label>
+                    <input type="number" id="editTemperature" step="0.1" required>
                 </div>
                 <div class="form-group">
                     <label for="editNotes">Notes:</label>
