--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
     <link rel="manifest" href="manifest.json">
     <!-- iOS Icons -->
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link rel="apple-touch-startup-image" href="icons/icon-512x512.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- Android Splash Screen -->
     <meta name="theme-color" content="#ffffff">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="TempTrack">
+    <meta name="application-name" content="TempTrack">
+    <!-- Splash Screen for Android -->
+    <link rel="icon" sizes="192x192" href="icons/icon-192x192.png">
+    <link rel="icon" sizes="512x512" href="icons/icon-512x512.png">
+    <link rel="shortcut icon" href="icons/icon-192x192.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .form-header {
