--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
     <div class="container">
         <header>
             <h1>Temperature Tracker</h1>
-            <p>Track your daily temperature readings</p>
+            <p>Track your daily temperature readings to find out if you've ovulated
+
+
+</p>
         </header>
 
         <main>
