--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="backup-actions">
                         <button id="importBtn" class="btn">
                             <i class="fas fa-file-import"></i> Import
-                            <input type="file" id="importFile" accept=".csv" style="display: none;">
+                            <input type="file" id="importFile" accept=".csv,text/csv,application/vnd.ms-excel" style="display:none;">
                         </button>
                         <button id="exportBtn" class="btn">
                             <i class="fas fa-file-export"></i> Export
