--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Tracker</title>
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Web App Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <!-- iOS Icons -->
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
-    <link rel="apple-touch-startup-image" href="icons/icon-512x512.png">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <link rel="apple-touch-startup-image" href="/icons/icon-512x512.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!-- Android Splash Screen -->
@@ -19,9 +19,9 @@
     <meta name="apple-mobile-web-app-title" content="TempTrack">
     <meta name="application-name" content="TempTrack">
     <!-- Splash Screen for Android -->
-    <link rel="icon" sizes="192x192" href="icons/icon-192x192.png">
-    <link rel="icon" sizes="512x512" href="icons/icon-512x512.png">
-    <link rel="shortcut icon" href="icons/icon-192x192.png">
+    <link rel="icon" sizes="192x192" href="/icons/icon-192x192.png">
+    <link rel="icon" sizes="512x512" href="/icons/icon-512x512.png">
+    <link rel="shortcut icon" href="/icons/icon-192x192.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .form-header {
@@ -125,7 +125,7 @@
             transform: rotate(45deg);
         }
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="container">
@@ -232,6 +232,6 @@
     </div>
 
     <!-- Custom Script -->
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
