--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             transform: rotate(45deg);
         }
     </style>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -232,6 +232,6 @@
     </div>
 
     <!-- Custom Script -->
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
